nasca 버전 업데이트, Retry 처리 추가

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">KakaoGallery</string>
+    <string name="app_name">Sasha</string>
+    <string name="fail_to_fetch">데이터 로딩에 실패했습니다.</string>
+    <string name="retry">다시 시도</string>
 </resources>
